fix: rm overflow from body

--- a/assets/css/gamestyle.css
+++ b/assets/css/gamestyle.css
@@ -15,7 +15,7 @@ body{
     margin: 0;
     background: rgb(168, 3, 3);
     font-family: 'Libre Baskerville', serif; 
-    overflow: hidden;
+   
        
 }
 
